
<resources>
    <string name="app_name">Sudoku noAds</string>
    <string name="welcome">Welcome</string>
    <string name="chose">Chose type of game :)</string>
    <string name="mod1">Easy 70%</string>
    <string name="mod2">Medium 40%</string>
    <string name="mod3">Hard 25%</string>
    <string name="mod4">Custom  50%</string>
    <string name="custom">Custom</string>
    <string name="restart">↺</string>
    <string name="newGame">new game</string>
    <string name="procenat">%</string>
    <string name="vrednost">50</string>
    <string name="clear">/X/</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="set">Set</string>
    <string name="done">Done</string>
    <string name="Kreiranje_tabele_u_toku">Creating table in progress.</string>
    <string name="Molimo_sacekajte">Please wait.</string>
    <!-- About dialog -->
    <string name="info">About</string>
    <string name="infoDEV1">Developer: </string>
    <string name="infoDEV2">Useful things</string>
    <string name="infoEmail1">Email: </string>
    <string name="infoEmail2">limitless.persistance@gmail.com</string>
    <string name="infoGame1">Game rules: </string>
    <string name="infoGame2">Every row, column and 3x3 rectangular must contains numbers from 1 till 9, no duplicate.</string>
    <string name="infoGIT1">GitHub repository: </string>
    <string name="infoGIT2">https://github.com/nikolaJapundzic/sudoku_android.git</string>
    <!-- About dialog -->


    <string name="yes">Yes</string>
    <string name="no">cancle</string>
    <string name="exitTabela">If you press Yes, you will not be able to continue same game.</string>

    <string name="exitMain">Are you sure you want to exit?</string>

</resources>
